--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
